--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<section class="service">
 				<div class="container">
 					<h3 class="sub-title">SERVICE</h3>
-					<h2 class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
+					<h2 id="T-LIFEのバリアフリー旅行サービス" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="images">
@@ -118,7 +118,7 @@
 			<section class="modelcose">
 				<div class="container">
 					<h3 class="sub-title text-center">MODELCORSE</h3>
-					<h2 id="#おすすめのモデルコース" class="heading-title text-center">T-おすすめのモデルコース</h2>
+					<h2 id="おすすめのモデルコース" class="heading-title text-center">T-おすすめのモデルコース</h2>
 					<div class="list-modelcose">
 						<img src="assets/images/bird.png" alt="" class="bird-3">
 
@@ -168,7 +168,7 @@
 			<section class="recommended">
 				<div class="container">
 
-					<h2 id="#おすすめホテルランキング" class="heading-title text-center">おすすめホテルランキング</h2>
+					<h2 id="おすすめホテルランキング" class="heading-title text-center">おすすめホテルランキング</h2>
 					<div class="list-recommended">
 						<div class="item-hotel">
 							<div class="icons-count">01</div>
@@ -236,7 +236,7 @@
 			<section class="voice">
 				<div class="container">
 					<h3 class="sub-title">VOICE</h3>
-					<h2 id="#お客様の声" class="heading-title">T-お客様の声</h2>
+					<h2 id="お客様の声" class="heading-title">T-お客様の声</h2>
 					<div class="list-voice">
 						<img src="assets/images/person-4.png" alt="" class="person-4">
 						<div class="row">
@@ -324,7 +324,7 @@
 			<section class="question">
 				<div class="container">
 					<h3 class="sub-title">QUESTION</h3>
-					<h2 id="#よくある質問" class="heading-title">T-よくある質問</h2>
+					<h2 id="よくある質問" class="heading-title">T-よくある質問</h2>
 					<div class="list-accordion">
 						<img src="assets/images/person-5.png" alt="" class="person-5">
 						<div id="accordion">
