--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="container">
 				<ul class="menu">
 					<li class="item">
-						<a href="#T-LIFEのバリアフリー旅行サービス">T-LIFEのバリアフリー旅行サービス</a>
+						<a href="#BarrierFreeTravelServices">T-LIFEのバリアフリー旅行サービス</a>
 					</li>
 					<li class="item">
 						<a href="#おすすめのモデルコース">おすすめのモデルコース</a>
@@ -81,7 +81,7 @@
 			<section class="service">
 				<div class="container">
 					<h3 class="sub-title">SERVICE</h3>
-					<h2 id="T-LIFEのバリアフリー旅行サービス" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
+					<h2 id="BarrierFreeTravelServices" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="images">
