--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<a href="#おすすめホテルランキング">おすすめホテルランキング</a>
 					</li>
 					<li class="item">
-						<a href="#お客様の声">お客様の声</a>
+						<a href="#voice">お客様の声</a>
 					</li>
 					<li class="item">
 						<a href="#よくある質問">よくある質問</a>
@@ -236,7 +236,7 @@
 			<section class="voice">
 				<div class="container">
 					<h3 class="sub-title">VOICE</h3>
-					<h2 id="お客様の声" class="heading-title">T-お客様の声</h2>
+					<h2 id="voice" class="heading-title">T-お客様の声</h2>
 					<div class="list-voice">
 						<img src="assets/images/person-4.png" alt="" class="person-4">
 						<div class="row">
