--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
 			<div class="container">
 				<ul class="menu">
 					<li class="item">
-						<a href="#BarrierFreeTravelServices">T-LIFEのバリアフリー旅行サービス</a>
+						<a href="#services">T-LIFEのバリアフリー旅行サービス</a>
 					</li>
 					<li class="item">
-						<a href="#おすすめのモデルコース">おすすめのモデルコース</a>
+						<a href="#recommended">おすすめのモデルコース</a>
 					</li>
 					<li class="item">
-						<a href="#おすすめホテルランキング">おすすめホテルランキング</a>
+						<a href="#rankinh">おすすめホテルランキング</a>
 					</li>
 					<li class="item">
 						<a href="#voice">お客様の声</a>
 					</li>
 					<li class="item">
-						<a href="#よくある質問">よくある質問</a>
+						<a href="#fqa">よくある質問</a>
 					</li>
 				</ul>
 				<div class="btts">
-					<a href="#バリアフリー旅行の詳細はこちら">バリアフリー旅行の詳細はこちら</a>
+					<a href="/">バリアフリー旅行の詳細はこちら</a>
 				</div>
 			</div>
 		</nav>
@@ -81,7 +81,7 @@
 			<section class="service">
 				<div class="container">
 					<h3 class="sub-title">SERVICE</h3>
-					<h2 id="BarrierFreeTravelServices" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
+					<h2 id="services" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="images">
@@ -118,7 +118,7 @@
 			<section class="modelcose">
 				<div class="container">
 					<h3 class="sub-title text-center">MODELCORSE</h3>
-					<h2 id="おすすめのモデルコース" class="heading-title text-center">T-おすすめのモデルコース</h2>
+					<h2 id="recommended" class="heading-title text-center">T-おすすめのモデルコース</h2>
 					<div class="list-modelcose">
 						<img src="assets/images/bird.png" alt="" class="bird-3">
 
@@ -168,7 +168,7 @@
 			<section class="recommended">
 				<div class="container">
 
-					<h2 id="おすすめホテルランキング" class="heading-title text-center">おすすめホテルランキング</h2>
+					<h2 id="rankinh" class="heading-title text-center">おすすめホテルランキング</h2>
 					<div class="list-recommended">
 						<div class="item-hotel">
 							<div class="icons-count">01</div>
@@ -324,7 +324,7 @@
 			<section class="question">
 				<div class="container">
 					<h3 class="sub-title">QUESTION</h3>
-					<h2 id="よくある質問" class="heading-title">T-よくある質問</h2>
+					<h2 id="fqa" class="heading-title">T-よくある質問</h2>
 					<div class="list-accordion">
 						<img src="assets/images/person-5.png" alt="" class="person-5">
 						<div id="accordion">
