--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
 			<div class="container">
 				<ul class="menu">
 					<li class="item">
-						<a href="#services">T-LIFEのバリアフリー旅行サービス</a>
+						<a href="#service">T-LIFEのバリアフリー旅行サービス</a>
 					</li>
 					<li class="item">
-						<a href="#recommended">おすすめのモデルコース</a>
+						<a href="#modelcose">おすすめのモデルコース</a>
 					</li>
 					<li class="item">
-						<a href="#rankinh">おすすめホテルランキング</a>
+						<a href="#recommended">おすすめホテルランキング</a>
 					</li>
 					<li class="item">
 						<a href="#voice">お客様の声</a>
 					</li>
 					<li class="item">
-						<a href="#fqa">よくある質問</a>
+						<a href="#question">よくある質問</a>
 					</li>
 				</ul>
 				<div class="btts">
-					<a href="/">バリアフリー旅行の詳細はこちら</a>
+					<a href="https://barrierfree.t-life.co.jp/">バリアフリー旅行の詳細はこちら</a>
 				</div>
 			</div>
 		</nav>
 		<main class="site-main" id="primary">
-			<section class="banner">
+			<section class="banner" id="banner">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7">
@@ -78,10 +78,10 @@
 					</div>
 				</div>
 			</section>
-			<section class="service">
+			<section class="service" id="service">
 				<div class="container">
 					<h3 class="sub-title">SERVICE</h3>
-					<h2 id="services" class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
+					<h2 class="heading-title">T-LIFEのバリアフリー旅行サービス</h2>
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="images">
@@ -109,16 +109,16 @@
 						</div>
 					</div>
 					<div class="btts">
-						<a href="#">バリアフリー旅行の詳細はこちら</a>
+						<a href="https://barrierfree.t-life.co.jp/">バリアフリー旅行の詳細はこちら</a>
 					</div>
 				</div>
 				<img src="assets/images/person-3.png" alt="" class="person-3">
 			</section>
 
-			<section class="modelcose">
+			<section class="modelcose" id="modelcose">
 				<div class="container">
 					<h3 class="sub-title text-center">MODELCORSE</h3>
-					<h2 id="recommended" class="heading-title text-center">T-おすすめのモデルコース</h2>
+					<h2 class="heading-title text-center">T-おすすめのモデルコース</h2>
 					<div class="list-modelcose">
 						<img src="assets/images/bird.png" alt="" class="bird-3">
 
@@ -135,7 +135,7 @@
 
 								</p>
 								<div class="btts">
-									<a href="#">詳細はこちら</a>
+									<a href="https://barrierfree.t-life.co.jp/modelcourse/941/">詳細はこちら</a>
 								</div>
 							</div>
 						</div>
@@ -153,7 +153,7 @@
 
 								</p>
 								<div class="btts">
-									<a href="#">詳細はこちら</a>
+									<a href="https://barrierfree.t-life.co.jp/modelcourse/1002/">詳細はこちら</a>
 								</div>
 							</div>
 						</div>
@@ -165,10 +165,10 @@
 				<img src="assets/images/tree-1.png" alt="" class="tree-1">
 			</section>
 
-			<section class="recommended">
+			<section class="recommended" id="recommended">
 				<div class="container">
 
-					<h2 id="rankinh" class="heading-title text-center">おすすめホテルランキング</h2>
+					<h2 class="heading-title text-center">おすすめホテルランキング</h2>
 					<div class="list-recommended">
 						<div class="item-hotel">
 							<div class="icons-count">01</div>
@@ -180,7 +180,7 @@
 									富士のふもと、河口湖のほとりに建ち、客室、お風呂、お食事といずれにおいても人に優しい配慮がされているホテルです。団体利用の場合は大浴場ではなく、バリアフリー対応の貸切風呂のみの利用となり、河口湖温泉を落ち着いてゆったりとご堪能いただけます。
 								</p>
 								<div class="btts">
-									<a href="#">詳細はこちら</a>
+									<a href="https://barrierfree.t-life.co.jp/hotel/540/">詳細はこちら</a>
 								</div>
 							</div>
 							<div class="images">
@@ -198,7 +198,7 @@
 									富士のふもと、河口湖のほとりに建ち、客室、お風呂、お食事といずれにおいても人に優しい配慮がされているホテルです。団体利用の場合は大浴場ではなく、バリアフリー対応の貸切風呂のみの利用となり、河口湖温泉を落ち着いてゆったりとご堪能いただけます。
 								</p>
 								<div class="btts">
-									<a href="#">詳細はこちら</a>
+									<a href="https://barrierfree.t-life.co.jp/hotel/1147/">詳細はこちら</a>
 								</div>
 
 							</div>
@@ -218,7 +218,7 @@
 									富士のふもと、河口湖のほとりに建ち、客室、お風呂、お食事といずれにおいても人に優しい配慮がされているホテルです。団体利用の場合は大浴場ではなく、バリアフリー対応の貸切風呂のみの利用となり、河口湖温泉を落ち着いてゆったりとご堪能いただけます。
 								</p>
 								<div class="btts">
-									<a href="#">詳細はこちら</a>
+									<a href="https://barrierfree.t-life.co.jp/hotel/495/">詳細はこちら</a>
 								</div>
 							</div>
 							<div class="images">
@@ -228,15 +228,15 @@
 
 					</div>
 					<div class="btts btts-2">
-						<a href="#">バリアフリー旅行の詳細はこちら</a>
+						<a href="https://barrierfree.t-life.co.jp/">バリアフリー旅行の詳細はこちら</a>
 					</div>
 				</div>
 			</section>
 
-			<section class="voice">
+			<section class="voice" id="voice">
 				<div class="container">
 					<h3 class="sub-title">VOICE</h3>
-					<h2 id="voice" class="heading-title">T-お客様の声</h2>
+					<h2 class="heading-title">T-お客様の声</h2>
 					<div class="list-voice">
 						<img src="assets/images/person-4.png" alt="" class="person-4">
 						<div class="row">
@@ -321,10 +321,10 @@
 					</div>
 				</div>
 			</section>
-			<section class="question">
+			<section class="question" id="question">
 				<div class="container">
 					<h3 class="sub-title">QUESTION</h3>
-					<h2 id="fqa" class="heading-title">T-よくある質問</h2>
+					<h2 class="heading-title">T-よくある質問</h2>
 					<div class="list-accordion">
 						<img src="assets/images/person-5.png" alt="" class="person-5">
 						<div id="accordion">
@@ -349,8 +349,7 @@
 								</div>
 								<div id="question-2" class="collapse" data-bs-parent="#accordion">
 									<div class="card-body">
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
+										大変申し訳ございませんが、介護タクシーやヘルパーのみの手配はお受けしておりません。
 									</div>
 								</div>
 							</div>
@@ -362,9 +361,8 @@
 								</div>
 								<div id="question-3" class="collapse" data-bs-parent="#accordion">
 									<div class="card-body">
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
-									</div>
+										通常、2ヶ月前までの依頼をお願いしております。
+										特にヘルパーやバリアフリールームをご希望の場合は、旅行直前では確保をすることができないことが多いので、余裕をもってご依頼いただけますと幸いです。 </div>
 								</div>
 							</div>
 							<div class="card">
@@ -375,8 +373,7 @@
 								</div>
 								<div id="question-4" class="collapse" data-bs-parent="#accordion">
 									<div class="card-body">
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
-										ここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入するここに回答テキストを記入する
+										ご旅行の時期や介護タクシー・ヘルパーの有無、ホテルの部屋タイプなどによりご料金は異なります。ご希望をお伺いした上でお見積もりを作成いたしますので、お問合せください。
 									</div>
 								</div>
 							</div>
